# bc-rust

./: Cargo.toml  Dockerfile  FinalProjectSubmission.docx  README.md  SampleFinalProjectSubmission.docx  index.html  main_without_frontend_example  output.json
src/: f_e.rs  json_input.json  main.rs  play.rs  thread.rs
user_interface/: index.html  index_1.html  index_2.html
user_interface/css/: style.css
