[package]
name = "blockchain"
version = "0.1.0"
authors = ["Trevor <71519259+TPXS-Drexel@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
num-bigint = "0.3.1"
num-traits = "0.2.14"
hex = "0.4.2"
sha2 = "0.9.2"
hex-literal = "0.2.1"
rayon = "1.5.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
tokio = "0.3.5"
async-std = "1.7.0"
futures = "0.3"
regex = "1.4.2"
lazy_static = "1.4.0"
threadpool = "1.4.0"
log = "0.4.8"